# gphotos-mcp-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml  security.yml
scripts/: pre-commit-secrets.sh
src/: auth.rs  config.rs  lib.rs  main.rs  mcp.rs  photos.rs
tests/: mcp_tools.rs  oauth_state.rs  photos_client.rs  security_workflow.rs
