[package]
name = "gphotos-mcp-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Google Photos MCP server with OAuth-based login"
repository = "https://github.com/whatnick/gphotos-mcp-rust"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.20.0"
wiremock = "0.6.3"
